Migrate to JDK 24 and junit 5